2022-04-19  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Dictation text that contains emojis is inserted twice upon finalization
        https://bugs.webkit.org/show_bug.cgi?id=239508
        rdar://91895524

        Reviewed by Aditya Keerthi.

        Add an API test to exercise the change.

        * TestWebKitAPI/Tests/ios/UIWKInteractionViewProtocol.mm:
        (TestWebKitAPI::TEST):

2022-04-19  Michael Saboff  <msaboff@apple.com>

        Various WebKit tools need to be told about the system content path
        https://bugs.webkit.org/show_bug.cgi?id=239516

        Reviewed by Ryan Haddad.

        Added the INSTALL_PATH_PREFIX to the INSTALL_PATH for the webkit test tools.
        This will contain the system content path prefix when enabled.

        * DumpRenderTree/mac/Configurations/Base.xcconfig:
        * DumpRenderTree/mac/Configurations/DumpRenderTree.xcconfig:
        * DumpRenderTree/mac/Configurations/LayoutTestHelper.xcconfig:
        * DumpRenderTree/mac/Configurations/TestNetscapePlugIn.xcconfig:
        * WebKitTestRunner/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/BaseTarget.xcconfig:

2022-04-19  Jonathan Bedard  <jbedard@apple.com>

        [ews-build.webkit.org] GitHub usernames are case insensitive
        https://bugs.webkit.org/show_bug.cgi?id=239509
        <rdar://problem/91971337>

        Reviewed by Aakash Jain.

        * CISupport/ews-build/steps.py:
        (GitHub.email_for_owners): Treat all GitHub usernames as lowercase.
        (Contributors.load): Ditto.
        (ValidateCommitterAndReviewer.is_reviewer): Ditto.
        (ValidateCommitterAndReviewer.is_committer): Ditto.
        (ValidateCommitterAndReviewer.full_name_from_email): Ditto.
        (AddReviewerMixin.gitCommitEnvironment): Ditto.
        (AddAuthorToCommitMessage.author): Ditto.

2022-04-19  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Text selection flickers when inserting text using dictation