@@ -55,6 +55,12 @@
     { "name": "ews126", "platform": "ios-simulator-15" },
     { "name": "ews127", "platform": "mac-bigsur" },
     { "name": "ews128", "platform": "mac-bigsur" },
+    { "name": "ews130", "platform": "*" },
+    { "name": "ews131", "platform": "ios-15" },
+    { "name": "ews132", "platform": "*" },
+    { "name": "ews133", "platform": "*" },
+    { "name": "ews134", "platform": "*" },
+    { "name": "ews135", "platform": "*" },
     { "name": "ews150", "platform": "*" },
     { "name": "ews151", "platform": "*", "max_builds": 3 },
     { "name": "ews152", "platform": "*" },
@@ -131,14 +137,14 @@
       "name": "iOS-15-Build-EWS", "shortname": "ios", "icon": "buildOnly",
       "factory": "iOSEmbeddedBuildFactory", "platform": "ios-15",
       "configuration": "release", "architectures": ["arm64"],
-      "workernames": ["ews152", "ews154", "ews108", "ews109"]
+      "workernames": ["ews152", "ews154", "ews108", "ews109", "ews130", "ews131", "ews132", "ews133"]
     },
     {
       "name": "iOS-15-Simulator-Build-EWS", "shortname": "ios-sim", "icon": "buildOnly",
       "factory": "iOSBuildFactory", "platform": "ios-simulator-15",
       "configuration": "release", "architectures": ["x86_64"],
       "triggers": ["api-tests-ios-sim-ews", "ios-15-sim-wk2-tests-ews"],
-      "workernames": ["ews152", "ews154", "ews156", "ews157", "ews108"]
+      "workernames": ["ews152", "ews154", "ews156", "ews157", "ews108", "ews130", "ews132", "ews133", "ews134", "ews135"]
     },
     {
       "name": "iOS-15-Simulator-WK2-Tests-EWS", "shortname": "ios-wk2", "icon": "testOnly",
@@ -305,7 +311,7 @@
       "name": "API-Tests-iOS-Simulator-EWS", "shortname": "api-ios", "icon": "testOnly",
       "factory": "APITestsFactory", "platform": "*",
       "triggered_by": ["ios-15-sim-build-ews"],
-      "workernames": ["ews156", "ews157", "ews158", "ews159", "ews183"]
+      "workernames": ["ews156", "ews157", "ews158", "ews159", "ews183", "ews134", "ews135"]
     },
     {
       "name": "API-Tests-macOS-EWS", "shortname": "api-mac", "icon": "testOnly",
